# strands-summer-agent

./: .gitignore  README.md  app.py  deploy.sh  pyproject.toml  requirements.txt
streamlit_app/: Dockerfile  app.py  requirements.txt
terraform/: README.md  main.tf  terraform.tfstate
terraform/agentcore/: main.tf  terraform.tf  terraform.tfstate
weather_agent/: .bedrock_agentcore.yaml  MemoryHook.py  agent.py  deploy.sh  memory_utils.py  prompts.py  requirements.txt  tools.py
