[project]
name = "strands-multi-agent-da-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "strands-agents[litellm]>=1.12.0",
    "strands-agents-tools>=0.2.11",
    "bedrock-agentcore-starter-toolkit>=0.1.25",
]
